refactor(backend): remove deprecated nutrition/workout modules