@@ -1,5 +1,6 @@
 package com.fitnessapp.backend.nutrition.service.admin;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
@@ -9,9 +10,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import com.fitnessapp.backend.nutrition.dto.FoodNutritionDto;
 import com.fitnessapp.backend.nutrition.entity.FoodNutrition;
-import com.fitnessapp.backend.nutrition.entity.FoodSynonym;
 import com.fitnessapp.backend.nutrition.repository.FoodNutritionRepository;
-import com.fitnessapp.backend.nutrition.repository.FoodSynonymRepository;
 
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
@@ -26,17 +25,38 @@ import lombok.extern.slf4j.Slf4j;
 public class FoodNutritionAdminService {
 
     private final FoodNutritionRepository foodNutritionRepository;
-    private final FoodSynonymRepository foodSynonymRepository;
 
     /**
-     * Get all food items with their synonyms
+     * Synonyms were previously stored in a dedicated table. That feature has been removed.
+     * Keep these endpoints as no-ops for backwards compatibility with older clients/admin tooling.
+     */
+    @Transactional
+    public void addSynonyms(String foodKey, List<String> synonyms) {
+        foodNutritionRepository.findByFoodKey(foodKey)
+                .orElseThrow(() -> new EntityNotFoundException("Food not found: " + foodKey));
+        log.debug("Ignoring addSynonyms request for foodKey={} (synonyms feature deprecated)", foodKey);
+    }
+
+    @Transactional(readOnly = true)
+    public List<String> getSynonyms(String foodKey) {
+        foodNutritionRepository.findByFoodKey(foodKey)
+                .orElseThrow(() -> new EntityNotFoundException("Food not found: " + foodKey));
+        return List.of();
+    }
+
+    @Transactional
+    public void deleteSynonym(String synonym) {
+        log.debug("Ignoring deleteSynonym request for synonym={} (synonyms feature deprecated)", synonym);
+    }
+
+    /**
+     * Get all food items
      */
     @Transactional(readOnly = true)
     public List<FoodNutritionDto> getAllFoods() {
         List<FoodNutrition> foods = foodNutritionRepository.findByIsActiveTrueOrderByFoodKey();
-        var synonymsByFoodKey = loadSynonyms(foods);
         return foods.stream()
-                .map(f -> toDto(f, synonymsByFoodKey.getOrDefault(f.getFoodKey(), List.of())))
+                .map(f -> toDto(f, Collections.emptyList()))
                 .collect(Collectors.toList());
     }
 
@@ -47,7 +67,7 @@ public class FoodNutritionAdminService {
     public FoodNutritionDto getFoodById(UUID id) {
         FoodNutrition food = foodNutritionRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Food not found: " + id));
-        return toDto(food, loadSynonyms(List.of(food)).getOrDefault(food.getFoodKey(), List.of()));
+        return toDto(food, Collections.emptyList());
     }
 
     /**
@@ -57,7 +77,7 @@ public class FoodNutritionAdminService {
     public FoodNutritionDto getFoodByKey(String foodKey) {
         FoodNutrition food = foodNutritionRepository.findByFoodKey(foodKey)
                 .orElseThrow(() -> new EntityNotFoundException("Food not found: " + foodKey));
-        return toDto(food, loadSynonyms(List.of(food)).getOrDefault(food.getFoodKey(), List.of()));
+        return toDto(food, Collections.emptyList());
     }
 
     /**
@@ -66,9 +86,8 @@ public class FoodNutritionAdminService {
     @Transactional(readOnly = true)
     public List<FoodNutritionDto> searchFoods(String keyword) {
         List<FoodNutrition> foods = foodNutritionRepository.searchByKeyword(keyword);
-        var synonymsByFoodKey = loadSynonyms(foods);
         return foods.stream()
-                .map(f -> toDto(f, synonymsByFoodKey.getOrDefault(f.getFoodKey(), List.of())))
+                .map(f -> toDto(f, Collections.emptyList()))
                 .collect(Collectors.toList());
     }
 
@@ -78,9 +97,8 @@ public class FoodNutritionAdminService {
     @Transactional(readOnly = true)
     public List<FoodNutritionDto> getFoodsByCategory(String category) {
         List<FoodNutrition> foods = foodNutritionRepository.findByCategoryAndIsActiveTrueOrderByFoodKey(category);
-        var synonymsByFoodKey = loadSynonyms(foods);
         return foods.stream()
-                .map(f -> toDto(f, synonymsByFoodKey.getOrDefault(f.getFoodKey(), List.of())))
+                .map(f -> toDto(f, Collections.emptyList()))
                 .collect(Collectors.toList());
     }
 
@@ -119,12 +137,7 @@ public class FoodNutritionAdminService {
         food = foodNutritionRepository.save(food);
         log.info("Created food: {}", food.getFoodKey());
 
-        // Create synonyms if provided
-        if (dto.getSynonyms() != null && !dto.getSynonyms().isEmpty()) {
-            createSynonyms(food.getFoodKey(), dto.getSynonyms());
-        }
-
-        return toDto(food, loadSynonyms(List.of(food)).getOrDefault(food.getFoodKey(), List.of()));
+        return toDto(food, Collections.emptyList());
     }
 
     /**
@@ -160,20 +173,7 @@ public class FoodNutritionAdminService {
         food = foodNutritionRepository.save(food);
         log.info("Updated food: {} -> {}", oldFoodKey, food.getFoodKey());
 
-        // Update synonyms if food key changed
-        if (!oldFoodKey.equals(food.getFoodKey())) {
-            // Delete old synonyms and recreate with new key
-            foodSynonymRepository.deleteByCanonicalFoodKey(oldFoodKey);
-            if (dto.getSynonyms() != null && !dto.getSynonyms().isEmpty()) {
-                createSynonyms(food.getFoodKey(), dto.getSynonyms());
-            }
-        } else if (dto.getSynonyms() != null) {
-            // Recreate synonyms
-            foodSynonymRepository.deleteByCanonicalFoodKey(food.getFoodKey());
-            createSynonyms(food.getFoodKey(), dto.getSynonyms());
-        }
-
-        return toDto(food, loadSynonyms(List.of(food)).getOrDefault(food.getFoodKey(), List.of()));
+        return toDto(food, Collections.emptyList());
     }
 
     /**
@@ -190,79 +190,15 @@ public class FoodNutritionAdminService {
     }
 
     /**
-     * Hard delete food item and its synonyms
+     * Hard delete food item
      */
     @Transactional
     public void hardDeleteFood(UUID id) {
         FoodNutrition food = foodNutritionRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Food not found: " + id));
 
-        foodSynonymRepository.deleteByCanonicalFoodKey(food.getFoodKey());
         foodNutritionRepository.delete(food);
         log.info("Hard deleted food: {}", food.getFoodKey());
-    }
-
-    /**
-     * Add synonyms to a food item
-     */
-    @Transactional
-    public void addSynonyms(String foodKey, List<String> synonyms) {
-        if (!foodNutritionRepository.existsByFoodKey(foodKey)) {
-            throw new EntityNotFoundException("Food not found: " + foodKey);
-        }
-        createSynonyms(foodKey, synonyms);
-    }
-
-    /**
-     * Get synonyms for a food item
-     */
-    @Transactional(readOnly = true)
-    public List<String> getSynonyms(String foodKey) {
-        return foodSynonymRepository.findByCanonicalFoodKeyOrderBySynonym(foodKey)
-                .stream()
-                .map(FoodSynonym::getSynonym)
-                .collect(Collectors.toList());
-    }
-
-    /**
-     * Delete a synonym
-     */
-    @Transactional
-    public void deleteSynonym(String synonym) {
-        FoodSynonym foodSynonym = foodSynonymRepository.findBySynonym(synonym)
-                .orElseThrow(() -> new EntityNotFoundException("Synonym not found: " + synonym));
-        foodSynonymRepository.delete(foodSynonym);
-        log.info("Deleted synonym: {} -> {}", synonym, foodSynonym.getCanonicalFoodKey());
-    }
-
-    // ---- Helper methods ----
-
-    private void createSynonyms(String foodKey, List<String> synonyms) {
-        for (String synonym : synonyms) {
-            if (synonym == null || synonym.isBlank()) continue;
-            if (foodSynonymRepository.existsBySynonym(synonym)) {
-                log.warn("Synonym already exists, skipping: {}", synonym);
-                continue;
-            }
-
-            FoodSynonym foodSynonym = FoodSynonym.builder()
-                    .synonym(synonym.trim())
-                    .canonicalFoodKey(foodKey)
-                    .language(detectLanguage(synonym))
-                    .build();
-            foodSynonymRepository.save(foodSynonym);
-            log.debug("Created synonym: {} -> {}", synonym, foodKey);
-        }
-    }
-
-    private String detectLanguage(String text) {
-        // Simple language detection based on character set
-        for (char c : text.toCharArray()) {
-            if (Character.UnicodeScript.of(c) == Character.UnicodeScript.HAN) {
-                return "zh";
-            }
-        }
-        return "en";
     }
 
     private FoodNutritionDto toDto(FoodNutrition entity, List<String> synonyms) {
@@ -281,12 +217,5 @@ public class FoodNutritionAdminService {
                 .isActive(entity.getIsActive())
                 .synonyms(synonyms)
                 .build();
-    }
-
-    private java.util.Map<String, List<String>> loadSynonyms(List<FoodNutrition> foods) {
-        if (foods.isEmpty()) return java.util.Collections.emptyMap();
-        List<String> keys = foods.stream().map(FoodNutrition::getFoodKey).toList();
-        return foodSynonymRepository.findByCanonicalFoodKeyIn(keys).stream()
-                .collect(Collectors.groupingBy(FoodSynonym::getCanonicalFoodKey, Collectors.mapping(FoodSynonym::getSynonym, Collectors.toList())));
     }
 }
